Add new examples
- Remove the need of periodically shifting atoms back to supercell. This
was not done consistently before, and is problematic when visualizing
the trajectory in GeoOpt or MD.

  NOTE: This is not yet done consistently in DG/TD.

- Add a utility si_ase.py as a new example of generating supercells
quickly using ase.

- Add a parameter Super_Cell_Angstrom to allow the supercell size to be
provided in the unit of angstrom (works better with xyz file format and
ase)

--- a/examples/pwdft/04-geoopt_hse/pwdft.in
+++ b/examples/pwdft/04-geoopt_hse/pwdft.in
@@ -1,6 +1,6 @@
 # H2O
 
-ion_move:               bb
+ion_move:               nlcg
 ion_max_iter:           20
 
 temperature:        	  300
@@ -8,7 +8,7 @@ extra_states:           4
 
 xc_type:                HSE
 
-ecut_wavefunction:        40
+ecut_wavefunction:      40
 eig_maxiter:            5
 pw_solver:              LOBPCG
 
@@ -17,9 +17,9 @@ begin upf_file
   ../../pp_ONCV/H_ONCV_PBE-1.2.upf
 end upf_file
 
-begin super_cell
-   10.0   10.0   10.0
-end super_cell
+begin super_cell_angstrom
+   6.0   6.0   6.0
+end super_cell_angstrom
 
 atom_types_num:        2
 
