Added BlockDistributor + validated with LOBPCGSolveReal

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -8,7 +8,10 @@ set( DG_COMMON_SRC
      mpi_interf.cpp  
      periodtable.cpp  
      scalapack.cpp  
-     utility.cpp )
+     utility.cpp 
+     block_distributor_impl.cpp
+     host_block_distributor.cpp
+)
 
 if( DGDFT_ENABLE_CUDA )
 
