--- a/examples/pwdft/01-ground_pbe/pwdft.in
+++ b/examples/pwdft/01-ground_pbe/pwdft.in
@@ -8,7 +8,7 @@ xc_type:                PBE
 ecut_wavefunction:        10
 
 begin upf_file
-  /autofs/nccs-svm1_home1/dbwy/devel/crd-dgdft/examples/pp_ONCV/Si_ONCV_PBE-1.2.upf
+  KW:Si_ONCV_PBE-1.2
 end upf_file
 
 begin super_cell
