Fixed issues in CUDA + CMake build system, device code segfaults

--- a/src/pwdft/CMakeLists.txt
+++ b/src/pwdft/CMakeLists.txt
@@ -20,3 +20,4 @@ endif()
 
 add_executable( pwdft ${DG_PWDFT_SRC} )
 target_link_libraries( pwdft PUBLIC common )
+target_include_directories( pwdft PUBLIC ${PROJECT_SOURCE_DIR}/src/pwdft )
