--- a/examples/pwdft/02-ground_hse/pwdft.in
+++ b/examples/pwdft/02-ground_hse/pwdft.in
@@ -1,14 +1,11 @@
 # Si 8 atoms
 
-temperature:        	  300
-extra_states:           0
-
 xc_type:                HSE
 
 ecut_wavefunction:        10
 
 begin upf_file
-  ../../pp_ONCV/Si_ONCV_PBE-1.2.upf
+  KW:Si_ONCV_PBE-1.2
 end upf_file
 
 begin super_cell
