Add support for HGH pseudopotential.
Add an example pwdft/ground_si_hgh/. (has not been thoroughly tested yet)

This is done by diagonalizing the DIJ matrix associated with each
angular momentum channel

Bug fix: In some files (like HGH) the values of rhocut is not provided.
We set the default to be 6.01 (the value for ONCV)

--- a/examples/pwdft/ground_si_hgh/pwdft.in
+++ b/examples/pwdft/ground_si_hgh/pwdft.in
@@ -1,8 +1,7 @@
 # Si 8 atoms
 
-temperature:        	  300
-extra_states:           8
 
+pseudo_type:            hgh
 xc_type:                PBE
 
 ecut_wavefunction:        10
