--- a/examples/pwdft/03-ground_pbe0/pwdft.in
+++ b/examples/pwdft/03-ground_pbe0/pwdft.in
@@ -8,7 +8,7 @@ xc_type:                PBE0
 ecut_wavefunction:        10
 
 begin upf_file
-  ../../pp_ONCV/Si_ONCV_PBE-1.2.upf
+  KW:Si_ONCV_PBE-1.2
 end upf_file
 
 begin super_cell
