--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ list( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
 # Get Modifed BLAS/LAPACK/ScaLAPACK Modules
 include( FetchContent )
 FetchContent_Declare( linalg-cmake-modules 
-  GIT_REPOSITORY https://github.com/wavefunction91/linalg-cmake-modules.git
+  GIT_REPOSITORY https://github.com/ajaypanyala/linalg-cmake-modules 
   GIT_TAG        main
 )
 FetchContent_GetProperties( linalg-cmake-modules )
