--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@
 include ../make.inc
 
 SRCS = pwdft.cpp dgdft.cpp \
-	diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp den2cubepw.cpp 
+	diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp den2cubepw.cpp lrden2cubepw.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
@@ -24,6 +24,9 @@ diagonalize: diagonalize.o ${DGDFT_LIB}
 den2cubepw: den2cubepw.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ den2cubepw.o $(LOADOPTS) )
 
+lrden2cubepw: lrden2cubepw.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ lrden2cubepw.o $(LOADOPTS) )
+
 den2cube: den2cube.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ den2cube.o $(LOADOPTS) )
 
@@ -42,4 +45,4 @@ cleanlib:
 	(${RM} -f ${DGDFT_LIB})
 
 cleanall:
-	rm -f ${EXES} ${OBJS} ${DEPS} *.d.*
+	rm -f ${EXES} ${OBJS} ${DEPS} *.d.o
