--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,17 +43,17 @@ else()
 endif()
 list( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
 
-# Get Modifed BLAS/LAPACK/ScaLAPACK Modules
-include( FetchContent )
-FetchContent_Declare( linalg-cmake-modules 
-  GIT_REPOSITORY https://github.com/ajaypanyala/linalg-cmake-modules 
-  GIT_TAG        main
-)
-FetchContent_GetProperties( linalg-cmake-modules )
-if( NOT linalg-cmake-modules_POPULATED )
-  FetchContent_Populate( linalg-cmake-modules )
-  list( APPEND CMAKE_MODULE_PATH ${linalg-cmake-modules_SOURCE_DIR} )
-endif()
+## Get Modifed BLAS/LAPACK/ScaLAPACK Modules
+#include( FetchContent )
+#FetchContent_Declare( linalg-cmake-modules 
+#  GIT_REPOSITORY https://github.com/ajaypanyala/linalg-cmake-modules 
+#  GIT_TAG        main
+#)
+#FetchContent_GetProperties( linalg-cmake-modules )
+#if( NOT linalg-cmake-modules_POPULATED )
+#  FetchContent_Populate( linalg-cmake-modules )
+#  list( APPEND CMAKE_MODULE_PATH ${linalg-cmake-modules_SOURCE_DIR} )
+#endif()
 
 
 
